# fastapi_personal_dictionary

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_19_2340-ae0fd7bc85ff_create_users_table.py
src/: config.py  database.py  main.py
src/auth/: README.md  dependencies.py  models.py  routes.py  schemas.py  services.py  utils.py
src/dictionary/: models.py  routes.py  schemas.py  services.py
